[Scala] disable GC limit for travis test